Repair footer gap

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,6 @@ footer {
   }
 
   footer{
-    top: 17.7rem;
+    top: 8rem;
   }
 }
